objects/tffa__VehicleSpecification__c.object
<CustomObject>
    <description>Used to store vehicle specification information like Year, make, Model, Sub-Model. This will be used in a vehicle loan application .
Reference :https://edmundsapi-preprod.github.io/api-documentation/vehicle/</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <description>Captures category of the vehicle as per the vehicle type selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Description of the vehicle model</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>Information URL if any</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MakeCode__c</fullName>
        <description>The unique code representing the make</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Make code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Make__c</fullName>
        <description>It’s either the name of the car’s manufacturer or, if the manufacturer has more than one operating unit, the name of that unit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ModelCode__c</fullName>
        <description>The code representing the model</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Model__c</fullName>
        <description>A specific vehicle brand identified by a name or number (and which is usually further classified by trim or style level)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SubModelCode__c</fullName>
        <description>Unique code of the submodel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub model code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SubModel__c</fullName>
        <description>The submodel of the car model</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Captures body type of the vehicle. Possible values are - CAR, TRUCK,SUV,PICKUP,VAN</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__YearCode__c</fullName>
        <description>The code representing the year</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Year code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Year__c</fullName>
        <description>For a vehicle model, the calendar year designation assigned by the manufacturer to the annual version of that model</description>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vehicle Specification</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Make__c</columns>
        <columns>tffa__Model__c</columns>
        <columns>tffa__SubModel__c</columns>
        <columns>tffa__Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>